Bootstrap example code for carousel added to index & made functional

--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!doctype html>
 <html>
 <head>
-  	<link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
-	<!-- Put stuff here lmao -->
+	<div id="carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+     <ol class="carousel-indicators">
+       <li data-target="#carousel" data-slide-to="0" class="active"></li>
+       <li data-target="#carousel" data-slide-to="1"></li>
+       <li data-target="#carousel" data-slide-to="2"></li>
+       <li data-target="#carousel" data-slide-to="3"></li>
+     </ol>
+
+     <!-- Wrapper for slides -->
+     <div class="carousel-inner" role="listbox">
+       <div class="item active">
+         <p>Stuff1</p>
+         <img src="img/sample-icon.png" alt="Chania">
+       </div>
+
+       <div class="item">
+         <p>Stuff2</p>
+         <img src="img/sample-icon.png" alt="Chania">
+       </div>
+
+       <div class="item">
+         <p>Stuff3</p>
+         <img src="img/sample-icon.png" alt="Flower">
+       </div>
+
+       <div class="item">
+         <p>Stuff4</p>
+         <img src="img/sample-icon.png" alt="Flower">
+       </div>
+     </div>
+
+     <!-- Left and right controls -->
+     <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+     </a>
+     <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+	</div>
 </body>
 </html>
