--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="">
+  <title>Insert Title Here Later, Man</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
+  <h1 class="header">Computer Science Site</h1>
+  <hr/>
 	<div id="carousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
      <ol class="carousel-indicators">
@@ -50,5 +53,6 @@
        <span class="sr-only">Next</span>
      </a>
 	</div>
+    <hr/>
 </body>
 </html>
