Added href tags to the carousel

--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@
      <!-- Wrapper for slides -->
      <div class="carousel-inner" role="listbox">
        <div class="item active">
-         <p>Stuff1</p>
-         <img src="img/sample-icon.png" alt="Chania">
+         <a href="games.html">
+           <p>Stuff1</p>
+           <img src="img/sample-icon.png" alt="Chania">
+         </a>
        </div>
-
        <div class="item">
-         <p>Stuff2</p>
-         <img src="img/sample-icon.png" alt="Chania">
+         <a href="games.html">
+           <p>Stuff2</p>
+           <img src="img/sample-icon.png" alt="Chania">
+         </a>
        </div>
-
        <div class="item">
-         <p>Stuff3</p>
-         <img src="img/sample-icon.png" alt="Flower">
+         <a href="games.html">
+           <p>Stuff3</p>
+           <img src="img/sample-icon.png" alt="Flower">
+         </a>
        </div>
-
        <div class="item">
-         <p>Stuff4</p>
-         <img src="img/sample-icon.png" alt="Flower">
+         <a href="games.html">
+           <p>Stuff4</p>
+           <img src="img/sample-icon.png" alt="Flower">
+         </a>
        </div>
      </div>
-
      <!-- Left and right controls -->
      <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
