--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <title>Insert Title Here Later, Man</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/everything.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
+  <div style="text-align:right; padding-right: 10px;padding-top:5px;">
+   <span>Are you a parent? <a href="">Click Here</a></span>
+  </div>
   <h1 class="header">Computer Science Site</h1>
   <hr/>
 	<div id="carousel" class="carousel slide" data-ride="carousel">
