--- a/schools.html
+++ b/schools.html
@@ -37,20 +37,20 @@
     </tr>
     <tr>
       <td>
-        <h3 class="title">Details</h3 class="title">
+        <h3>Details</h3>
         <ul>
           <li>Location: Fredericton, New Brunswick</li>
           <li>Established idk</li>
           <li>Price: >9000</li>
           <li>Residence Cost: idk</li>
         </ul>
-        <h3 class="title">High School Requirements:</h3 class="title">
+        <h3>High School Requirements:</h3>
         <ul>
           <li>Average of 70%</li>
         </ul>
       </td>
       <td>
-        <h3 class="title">Overview</h3 class="title">
+        <h3>Overview</h3>
         <p>This is an overview of my ass</p>
       </td>
     </tr>
