small tag name change

--- a/schools.html
+++ b/schools.html
@@ -34,7 +34,7 @@
   </div>
   <div>
     <!-- UNB Nick: copy from here to the next comment-->
-    <table class="university_panel" data-table="UNB">
+    <table class="university_panel" data-school="UNB">
       <tr>
         <td colspan=2>
             <h2 style='text-align:center;'>University of New Brunswick</h2>
@@ -63,7 +63,7 @@
       </tr>
     </table>
     <!-- UO -->
-    <table class="university_panel" data-table="UO">
+    <table class="university_panel" data-school="UO">
       <tr>
         <td colspan=2>
             <h2 style='text-align:center;'>University of Ottawa</h2>
