Added basic video iframe embedding

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
      <!-- Wrapper for slides -->
      <div class="carousel-inner" role="listbox">
        <div class="item active">
-         <a href="games.html">
-           <p>Stuff1</p>
-           <img src="img/sample-icon.png" alt="Chania">
+         <a href="videos.html">
+           <p>Videos</p>
+           <img src="img/sample-icon.png" alt="Videos">
+         </a>
+       </div>
+       <div class="item">
+         <a href="schools.html">
+           <p>Schools</p>
+           <img src="img/sample-icon.png" alt="Schools">
+         </a>
+       </div>
+       <div class="item">
+         <a href="careers.html">
+           <p>Careers</p>
+           <img src="img/sample-icon.png" alt="Careers">
          </a>
        </div>
        <div class="item">
          <a href="games.html">
-           <p>Stuff2</p>
-           <img src="img/sample-icon.png" alt="Chania">
-         </a>
-       </div>
-       <div class="item">
-         <a href="games.html">
-           <p>Stuff3</p>
-           <img src="img/sample-icon.png" alt="Flower">
-         </a>
-       </div>
-       <div class="item">
-         <a href="games.html">
-           <p>Stuff4</p>
-           <img src="img/sample-icon.png" alt="Flower">
+           <p>Games</p>
+           <img src="img/sample-icon.png" alt="Games">
          </a>
        </div>
      </div>
