--- a/videos.html
+++ b/videos.html
@@ -3,8 +3,15 @@
 <head>
   	<link rel="stylesheet" type="text/css" href="">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/videos.js"></script>
 </head>
 <body>
-	<!-- Put stuff here lmao -->
+  <!-- This div contains the sample iframe we're gonna use as a template to create video boxes -->
+  <div style="display:none;" id="sample_iframe">
+    <iframe width="420" height="315" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div id="video_panel">
+    <!-- if you want a video to appear, add the embed url to the array in videos.js -->
+  </div>
 </body>
 </html>
