Styling for index page. Some other jank

--- a/schools.html
+++ b/schools.html
@@ -6,6 +6,9 @@
     <script type="text/javascript" src="js/schools.js"></script>
 </head>
 <body>
+  <div style="padding-left: 10px;padding-top:5px;">
+   <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
+  </div>
   <!-- Search Bar -->
   <div>
     <table style='margin:0 auto;'>
