--- a/videos.html
+++ b/videos.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" src="js/videos.js"></script>
 </head>
 <body>
+  <div style="padding-left: 10px;padding-top:5px;">
+   <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
+  </div>
   <div>
     <table class="search_table">
       <tr>
