Added more backgrounds

--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script type="text/javascript" src="js/videos.js"></script>
 </head>
-<body>
+<body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
    <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
   </div>
