--- a/schools.html
+++ b/schools.html
@@ -5,13 +5,13 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/schools.js"></script>
 </head>
-<body>
+<body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
    <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
   </div>
   <!-- Search Bar -->
   <div>
-    <table style='margin:0 auto;'>
+    <table style='margin:0 auto; border-radius: 20px;'>
       <tr>
         <td>Province</td> <td>School</td>
       </tr>
