More styling, starting to look presentable

--- a/schools.html
+++ b/schools.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html>
 <head>
+    <title>LearnCS - Schools</title>
   	<link rel="stylesheet" type="text/css" href="css/schools.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/schools.js"></script>
 </head>
 <body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
-   <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
+    <table>
+      <tr style='font-weight: bold;'>
+        <td><a href="index.html">Go Back</a></td>
+      </tr>
   </div>
   <!-- Search Bar -->
-  <div>
-    <table style='margin:0 auto; border-radius: 20px;'>
-      <tr>
+  <div style="padding-bottom: 10px;">
+    <table style='margin:0 auto;'>
+      <tr style='font-weight: bold;'>
         <td>Province</td> <td>School</td>
       </tr>
       <tr>
@@ -34,6 +38,7 @@
       </tr>
 
       </table>
+
   </div>
   <div>
     <!-- UNB Nick: copy from here to the next comment-->
