--- a/careers.html
+++ b/careers.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <title>LearnCS - Careers</title>
   	<link rel="stylesheet" type="text/css" href="">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
