--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <title>LearnCS - Videos</title>
   	<link rel="stylesheet" type="text/css" href="css/videos.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
@@ -9,12 +10,15 @@
 </head>
 <body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
-   <span><a href="index.html">Back</a></span> <!--Maybe remove this-->
+    <table>
+      <tr style='font-weight: bold;'>
+        <td><a href="index.html">Go Back</a></td>
+      </tr>
   </div>
   <div>
     <table class="search_table">
       <tr>
-        <td>
+        <td style='font-weight: bold;'>
           Search for a Topic:
         </td>
       </tr>
