Commit from wrong directory

--- a/videos.html
+++ b/videos.html
@@ -3,6 +3,7 @@
 <head>
     <title>LearnCS - Videos</title>
   	<link rel="stylesheet" type="text/css" href="css/videos.css">
+  	<link rel="stylesheet" type="text/css" href="css/everything.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
