--- a/skeleton.html
+++ b/skeleton.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   	<link rel="stylesheet" type="text/css" href="">
+  	<link rel="stylesheet" type="text/css" href="css/everything.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
