--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </ol>
       <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <div class="item active" style="background: url(http://www.cpr.org/sites/default/files/images/coding_workshop.jpg) no-repeat center center fixed;">
+        <div class="item active" style="background: url(http://www.cpr.org/sites/default/files/images/coding_workshop.jpg) no-repeat center center fixed;"  href="videos.html">
           <a href="schools.html">
             <div class='container'>
               <div class="vertical_center">
