Added content to careers page.

--- a/schools.html
+++ b/schools.html
@@ -69,7 +69,7 @@
           <h3>Overview</h3>
           <li>Great Co-op program.</li>
           <li>Supportive faculty, staff, and students.</li>
-          <li>Tutoring and peer-mentoring available..</li>
+          <li>Tutoring and peer-mentoring available.</li>
         </td>
       </tr>
     </table>
