Added headers to every page. Added >> to career collapse boxes. Globalized font for h1

--- a/schools.html
+++ b/schools.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>LearnCS - Schools</title>
-  	<link rel="stylesheet" type="text/css" href="css/schools.css">
-    <link rel="stylesheet" type="text/css" href="css/everything.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/schools.js"></script>
+  	<link rel="stylesheet" type="text/css" href="css/schools.css">
+    <link rel="stylesheet" type="text/css" href="css/everything.css">
 </head>
 <body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
@@ -13,7 +13,9 @@
       <tr style='font-weight: bold;'>
         <td><a href="index.html">Go Back</a></td>
       </tr>
+    </table>
   </div>
+  <h1>Schools</h1>
   <!-- Search Bar -->
   <div style="padding-bottom: 10px;">
     <table style='margin:0 auto;'>
