--- a/videos.html
+++ b/videos.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>LearnCS - Videos</title>
-  	<link rel="stylesheet" type="text/css" href="css/videos.css">
-  	<link rel="stylesheet" type="text/css" href="css/everything.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script type="text/javascript" src="js/videos.js"></script>
+  	<link rel="stylesheet" type="text/css" href="css/videos.css">
+  	<link rel="stylesheet" type="text/css" href="css/everything.css">
 </head>
 <body style="background: url(http://adventurega.me/bootstrap/img/header.jpg); background-attachment: fixed;">
   <div style="padding-left: 10px;padding-top:5px;">
@@ -15,7 +15,9 @@
       <tr style='font-weight: bold;'>
         <td><a href="index.html">Go Back</a></td>
       </tr>
+    </table>
   </div>
+    <h1>Videos</h1>
   <div>
     <table class="search_table">
       <tr>
